[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/Fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Art/Music/vgm-horror-watching.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.094
anchor_top = 0.111
anchor_right = 0.906
anchor_bottom = 0.889
margin_left = -0.198006
margin_top = 0.0799942
margin_right = 0.439941
margin_bottom = -0.0800171
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1039.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Abyssal Damnation"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Menu"]
margin_top = 45.0
margin_right = 1039.0
margin_bottom = 147.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 102

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
margin_top = 151.0
margin_right = 1039.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Menu/CenterContainer"]
margin_left = 486.0
margin_right = 552.0
margin_bottom = 41.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="CenterContainer4" type="CenterContainer" parent="Menu"]
margin_top = 196.0
margin_right = 1039.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QPlayButton" type="Button" parent="Menu/CenterContainer4"]
margin_left = 429.0
margin_right = 610.0
margin_bottom = 41.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Quick Start"

[node name="CenterContainer5" type="CenterContainer" parent="Menu"]
margin_top = 241.0
margin_right = 1039.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="Menu/CenterContainer5"]
margin_left = 412.0
margin_right = 626.0
margin_bottom = 41.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "View Tutorial"

[node name="CenterContainer2" type="CenterContainer" parent="Menu"]
margin_top = 286.0
margin_right = 1039.0
margin_bottom = 327.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditButton" type="Button" parent="Menu/CenterContainer2"]
margin_left = 461.0
margin_right = 578.0
margin_bottom = 41.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="CenterContainer3" type="CenterContainer" parent="Menu"]
margin_top = 331.0
margin_right = 1039.0
margin_bottom = 372.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Menu/CenterContainer3"]
margin_left = 488.0
margin_right = 551.0
margin_bottom = 41.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Menu/CenterContainer/PlayButton" to="Menu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/PlayButton" to="Menu/CenterContainer/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer4/QPlayButton" to="Menu" method="_on_QPlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer5/TutorialButton" to="Menu" method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer2/CreditButton" to="Menu" method="_on_CreditButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer3/ExitButton" to="Menu" method="_on_ExitButton_pressed"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="Menu" method="_on_AnimationPlayer_animation_finished"]
